# ec-shop

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: addresses.py  admin.py  auth.py  categories.py  coupons.py  orders.py  pets.py  postal_code.py  products.py  router.py  share.py  tryon.py  webhooks.py
backend/app/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
backend/app/models/: __init__.py  address.py  base.py  category.py  coupon.py  order.py  pet.py  product.py  share_link.py  share_settings.py  tryon.py  user.py
backend/app/repositories/: address_repository.py  base.py  coupon_repository.py  order_repository.py  pet_repository.py  product_repository.py  share_click_repository.py  share_link_repository.py  user_repository.py
backend/app/schemas/: __init__.py  address.py  auth.py  category.py  common.py  coupon.py  order.py  pet.py  product.py  share.py  tryon.py
backend/app/services/: address_service.py  admin_service.py  auth_service.py  category_service.py  coupon_service.py  order_service.py  payment_service.py  pet_service.py  product_service.py  share_service.py  tryon_service.py
backend/app/utils/: file_upload.py  postal_code.py  security.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_api_auth.py  test_services_auth.py  test_services_coupon.py  test_services_order.py  test_services_product.py  test_services_share.py  test_services_tryon.py  test_utils_security.py
docs/: HOW_TO_RUN.md  (+5 more)
(+50 files in other folders)
